...
  Widget build(BuildContext context) {
    return GestureDetector(
      onTap: () {
        FocusScope.of(context).unfocus();
      },
      child: Scaffold(
        appBar: const BarraNavegacion(nombre: 'FIRMAR'),
        body: SingleChildScrollView(
          physics: const ScrollPhysics(),
          child: Padding(
            padding: const EdgeInsets.all(20),
            child: Form(
              key: _formKeyGeneral,
...
                    controller: _dni,
                  ),
                  const SizedBox(
                    height: 30,
                  ),
                  BotonGradiente(
                    nombre: "GUARDAR",
                    onTap: () async {
                      if (_formKeyGeneral.currentState!.validate()) {
                        if (_controladorFirma.isEmpty) {
                          ScaffoldMessenger.of(context)
                            ..removeCurrentSnackBar()
                            ..showSnackBar(
...
