...
}

class _SeleccionClienteState extends State<SeleccionCliente> {
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: const BarraNavegacion(nombre: 'SELECCIÓN CLIENTE'),
      body: ListView.builder(
        padding: const EdgeInsets.symmetric(horizontal: 20, vertical: 15),
        itemCount: boxClientes.length,
        itemBuilder: (context, index) {
          Cliente cliente = boxClientes.getAt(index);
          return Padding(
...
